# mulle-fetch

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePackage.cmake  CMakePackage.txt  Makefile  README.md  RELEASENOTES.md  install.sh  installer  mulle-fetch  mulle-fetch.sublime-project
.github/workflows/: semgrep.yml
.mulle/etc/project/: formula-info.sh  version-info.sh
cola/: description.md.bud  info.md.bud  properties.plist  usage.md.bud
dox/: Makefile  mulle-fetch-fs.dot  mulle-fetch-overview.dot
mulle-project/: formula-info.sh  version-info.sh
src/: mulle-fetch-archive.sh  mulle-fetch-commands.sh  mulle-fetch-curl.sh  mulle-fetch-filter.sh  mulle-fetch-git.sh  mulle-fetch-github.sh  mulle-fetch-operation.sh  mulle-fetch-plugin.sh  mulle-fetch-source.sh  mulle-fetch-url.sh
src/plugins/: clib.sh  file.sh  git.sh  local.sh  svn.sh  symlink.sh  tar.sh  zip.sh
src/plugins/domain/: github.sh  mulle_kybernetik.sh
src/plugins/scm/: file.sh  git.sh  svn.sh  symlink.sh  tar.sh  zip.sh
test/: run-test
test/01-fetch-git/: run-test
test/02-fetch-tar-zip/: run-test
test/04-fetch-svn/: run-test
test/05-fetch-file/: run-test
test/06-fetch-git-symlink/: run-test
test/11-checkout-git/: run-test
test/21-update-git/: run-test
test/31-upgrade-git/: run-test
test/41-set-url-git/: run-test
test/51-status-git/: run-test
test/61-search-local-git/: run-test
test/71-guess/: run-test
tests/: run-test  run-test.sh
tests/01-fetch-git/: run-test  run-test.sh
tests/02-fetch-tar-zip/: run-test
tests/04-fetch-svn/: run-test  run-test.sh
tests/05-fetch-file/: run-test
tests/06-fetch-git-symlink/: run-test  run-test.sh
tests/11-checkout-git/: run-test  run-test.sh
tests/21-update-git/: run-test.sh
tests/31-upgrade-git/: run-test
tests/41-set-url-git/: run-test
tests/51-status-git/: run-test  run-test.sh
tests/61-search-local-git/: run-test  run-test.sh
tests/71-guess/: run-test
